Add sale banner section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,36 @@
           </ul>
         </div>
       </div>
-     
     </header>
+    <main>
+      <div class="sale-container">
+        <div class="sale-text-container">
+          <h3 class="promotion-title-text">SALE</h3>
+          <br />
+          <p class="promotion-subtitle-text">Up to</p>
+          <h3 class="promotion-title-text-promotion">50% off</h3>
+          <h4 class="promotion-title-text">Selected lines</h4>
+          <br />
+          <h4 class="promotion-title-text">New Lines Added</h4>
+          <br />
+        </div>
+        <div class="sale-carousel-wrapper">
+          <div class="sale-carousel">
+            <a href="" class="sale-carousel-card"
+              ><img src="/assets/images/sales-women.jpg" alt="Sale Item 1" />
+              <p class="sale-carousel-text">Women</p></a
+            >
+            <a href="" class="sale-carousel-card"
+              ><img src="/assets/images/sales-men.jpg" alt="Sale Item 2" />
+              <p class="sale-carousel-text">Men</p></a
+            >
+            <a href="" class="sale-carousel-card"
+              ><img src="/assets/images/sales-home.jpg" alt="Sale Item 3" />
+              <p class="sale-carousel-text">Home</p></a
+            >
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
