Add highlights section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,51 @@
           </div>
         </div>
       </div>
+      <div class="highlights-container">
+         <div class="highlights-section">
+        <h4>Highlights</h4>
+        <div class="highlights-carousel-wrapper">
+          <div class="highlights-carousel">
+            
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/diaries.jpg" alt="2026 Diaries & calendars" />
+              <p class="highlights-carousel-text">2026 Diaries & calendars</p>
+            </a>
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/cooking.jpg" alt="" />
+
+              <p class="highlights-carousel-text">Cooking & dining</p>
+            </a>
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/storage.jpg" alt="" />
+
+              <p class="highlights-carousel-text">Storage</p>
+            </a>
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/cleaning.jpg" alt="" />
+
+              <p class="highlights-carousel-text">Cleaning system</p>
+            </a>
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/shelving.jpg" alt="" />
+
+              <p class="highlights-carousel-text">Shelving units</p>
+            </a>
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/pens.jpg" alt="" />
+
+              <p class="highlights-carousel-text">Pens & pencils</p>
+            </a>
+            <a href="" class="highlights-carousel-card">
+              <img src="/assets/images/travel.jpg" alt="" />
+
+              <p class="highlights-carousel-text">Travel</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      </div>
+     <div class="hero-container"></div>
     </main>
   </body>
 </html>
