Add hero section

--- a/index.html
+++ b/index.html
@@ -195,7 +195,28 @@
         </div>
       </div>
       </div>
-     <div class="hero-container"></div>
+     <div class="hero-container">
+      <div class="hero-carousel-wrapper">
+        <div class="hero-carousel">
+          <div class="hero-carousel-card">
+            <img src="/assets/images/essentials.jpg" alt="Hero Image 1" />
+            <div class="hero-carousel-card-text">
+              <h2>Winter Essentials</h2>
+              <a href="">Women <span>→</span> </a>
+              <a href="">Men <span>→</span></a>
+            </div>
+          </div>
+          <div class="hero-carousel-card">
+            <img src="/assets/images/porcelain.jpg" alt="Hero Image 2" />
+          <div class="hero-carousel-card-text">
+              <h2>Hasami Porcelain</h2>
+              <a href="">Explore the collection<span>→</span></a>
+          </div>
+        
+         
+        </div>
+      </div>
+     </div>
     </main>
   </body>
 </html>
