--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="promo-bar">
+    <div class="promo-bar">
         <div class="group">
           <div class="item">
             <a href="https://www.muji.eu/sale/markdown">
@@ -72,6 +71,8 @@
           </div>
         </div>
       </div>
+    <header>
+      
       <div class="navbar">
         <div class="navbarSection">
           <div class="left-section">
@@ -216,6 +217,7 @@
          
         </div>
       </div>
+     </div>
      </div>
     </main>
   </body>
