Add best seller section

--- a/index.html
+++ b/index.html
@@ -219,6 +219,23 @@
       </div>
      </div>
      </div>
+     <div class="best-seller-container">
+         <div class="best-seller-section">
+        <h4>Explore best sellers</h4>
+        
+          <div class="best-seller-grid">
+            <a href="" class="best-seller-grid-card"
+              ><img src="/assets/images/bswomen.jpg" alt="Best Seller Item 1" />
+              <p class="best-seller-grid-text">Women</p></a>
+            <a href="" class="best-seller-grid-card"
+              ><img src="/assets/images/bsmen.jpg" alt="Best Seller Item 2" />
+              <p class="best-seller-grid-text">Men</p></a>
+            <a href="" class="best-seller-grid-card">
+              <img src="/assets/images/bshomeware.jpg" alt="Best Seller Item 3" />
+              <p class="best-seller-grid-text">Homeware</p></a>
+          </div>
+      
+      </div>
     </main>
   </body>
 </html>
