Small CSS fixes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <header>
       <div class="navbar">
-        <div class="navbarSection">
+        <div class="navbar-section">
           <div class="left-section">
             <div class="search-bar">
               <div id="searchimg-container">
@@ -82,7 +82,7 @@
               <input
                 type="text"
                 placeholder="Search the store"
-                id="search-input"
+                class="search-input"
               />
             </div>
           </div>
@@ -93,7 +93,7 @@
             />
           </div>
           <div class="right-section">
-            <ul id="icon-list">
+            <ul class="icon-list">
               <li><img src="/assets/icons/flag.svg" alt="" srcset="" /></li>
               <li><img src="/assets/icons/personstanding.svg" alt="" /></li>
               <li>
