Add media queries

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </div>
               <input
                 type="text"
-                placeholder="Search the store"
+                placeholder="Search"
                 class="search-input"
               />
             </div>
